objects/AccountOwnershipRule__c.object
<CustomObject>
    <fields>
        <fullName>AccountOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Owner the account should be assigned to</description>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Ownership_Rules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClassLevel1__c</fullName>
        <label>Classification Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>IG</fullName>
                </value>
                <value>
                    <fullName>LC</fullName>
                </value>
                <value>
                    <fullName>OM</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
                <value>
                    <fullName>RT</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>VR</fullName>
                </value>
                <value>
                    <fullName>WD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Account Ownership Rules</relationshipLabel>
        <relationshipName>Account_Ownership_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County to which the state belongs ( Mapping of county &amp; state managed via custom setting )</description>
        <label>County</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functionality__c</fullName>
        <description>Used to determine which functionality the rule is used for. AOA - Account Ownership Assignment, EAO - External Agent Ownership</description>
        <inlineHelpText>Defines the functionality/process wherein the rule is used.
AOA - Account Ownership Assignment
EAO - External Agent Ownership</inlineHelpText>
        <label>Functionality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AOA</fullName>
                </value>
                <value>
                    <fullName>EAO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadingBusiness__c</fullName>
        <label>Leading Business (BU)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>GW</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>SO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StateProvince__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created to lookup to the State/province object inorder to map it to the country and also the Account owners</description>
        <label>State/Province</label>
        <referenceTo>StateProvince__c</referenceTo>
        <relationshipLabel>Account Ownership Rules</relationshipLabel>
        <relationshipName>Account_Ownership_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TECH_CountryCode__c</fullName>
        <formula>Country__r.CountryCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_CountryCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_CriteriaCode__c</fullName>
        <description>Technical field used to store the code obtained by concatenating the values of conditional fields. This field is used to compare and respectively assign the Account owner (if the code matches).</description>
        <formula>IF( 
	ISPICKVAL( Functionality__c , &quot;AOA&quot;), 
	TEXT(ClassLevel1__c) &amp;  TEXT(LeadingBusiness__c)  &amp;  Country__r.CountryCode__c,
	IF( 
		ISPICKVAL( Functionality__c , &quot;EAO&quot;), 
 IF( ISBLANK( County__c )  , Country__r.CountryCode__c &amp; TEXT(ClassLevel1__c) &amp;  StateProvince__r.StateProvinceCode__c  , Country__r.CountryCode__c &amp; TEXT(ClassLevel1__c) &amp; County__c) 
		, 
		null
	) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_CriteriaCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_StateProvinceCode__c</fullName>
        <description>This is a TECH field which will be used to match the state code from the Account record created with the AOR data</description>
        <formula>StateProvince__r.StateProvinceCode__c</formula>
        <label>TECH_StateProvinceCode</label>
        <type>Text</type>
    </fields>
    <label>Account Ownership Rule</label>
    <listViews>
        <fullName>AOR_ITALY</fullName>
        <columns>NAME</columns>
        <columns>Functionality__c</columns>
        <columns>County__c</columns>
        <columns>ClassLevel1__c</columns>
        <columns>StateProvince__c</columns>
        <columns>AccountOwner__c</columns>
        <columns>LeadingBusiness__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>ITALY</value>
        </filters>
        <label>AOR - ITALY</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Functionality__c</columns>
        <columns>ClassLevel1__c</columns>
        <columns>Country__c</columns>
        <columns>LeadingBusiness__c</columns>
        <columns>County__c</columns>
        <columns>AccountOwner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AOR-{00000}</displayFormat>
        <label>Account Ownership Rule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Ownership Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>